--- a/.drone.yml
+++ b/.drone.yml
@@ -96,4 +96,26 @@ volumes:
   host:
     path: /var/run/docker.sock
 
-...
+---
+kind: pipeline
+type: docker
+name: manifest
+platform:
+  os: linux
+  arch: amd64
+steps:
+- name: push
+  image: plugins/manifest:1.2.3
+  settings:
+    password:
+      from_secret: docker_password
+    username:
+      from_secret: docker_username
+    spec: manifest.tmpl
+    ignore_missing: true
+  when:
+    event:
+    - tag
+depends_on:
+- linux-amd64
+- linux-arm64
